@@ -9,6 +9,11 @@ geometry-1.4.2   Release Date: 2012-XX-XX  Release Manager: Juan Pablo Carbajal
  - curve2polyline.m: Converts a polynomial curve into a polyline by the adaptive
                      sampling method.
 
+* Changed functions
+ - distancePointEdge.m: Now the function computes the distance between all points
+                        and all edges. A third optional argument provides
+                        backward compatibility.
+
 * Known issues
  - simplifypolygon.m returns empty polygons when points are repeated, i.e when
   the polygon is not correctly formed.
